# app_agasalhos

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: app.hpp  app_base.hpp  main.cpp
